hardening/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT

### tuple ### allow udp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow udp 67 0.0.0.0/0 68 0.0.0.0/0 in_enp0s9
-A ufw-user-input -i enp0s9 -p udp --dport 67 --sport 68 -j ACCEPT

### tuple ### allow any 2222 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2222 -j ACCEPT
-A ufw-user-input -p udp --dport 2222 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT
-A ufw-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow any 67 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 67 -j ACCEPT
-A ufw-user-input -p udp --dport 67 -j ACCEPT

### tuple ### allow any 68 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 68 -j ACCEPT
-A ufw-user-input -p udp --dport 68 -j ACCEPT

### tuple ### allow any 323 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 323 -j ACCEPT
-A ufw-user-input -p udp --dport 323 -j ACCEPT

### tuple ### allow any 953 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 953 -j ACCEPT
-A ufw-user-input -p udp --dport 953 -j ACCEPT

### tuple ### allow any 2222 0.0.0.0/0 any 172.16.147.175 in
-A ufw-user-input -p tcp --dport 2222 -s 172.16.147.175 -j ACCEPT
-A ufw-user-input -p udp --dport 2222 -s 172.16.147.175 -j ACCEPT

### tuple ### allow any 2222 0.0.0.0/0 any 172.16.146.0/23 in
-A ufw-user-input -p tcp --dport 2222 -s 172.16.146.0/23 -j ACCEPT
-A ufw-user-input -p udp --dport 2222 -s 172.16.146.0/23 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 172.16.147.175 in
-A ufw-user-input -p tcp --dport 22 -s 172.16.147.175 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 172.16.147.175 -j ACCEPT

### tuple ### deny any 25 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 25 -j DROP
-A ufw-user-output -p udp --dport 25 -j DROP

### tuple ### deny any 465 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 465 -j DROP
-A ufw-user-output -p udp --dport 465 -j DROP

### tuple ### deny any 587 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 587 -j DROP
-A ufw-user-output -p udp --dport 587 -j DROP

### tuple ### allow any 3128 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3128 -j ACCEPT
-A ufw-user-input -p udp --dport 3128 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
